@@ -6,6 +6,7 @@
 	* Add likely tag in outmem.
 	* Add ifdefs around MEM_OUT handling in outmem.
 	* Remove unnecessary restoration of format string in printf.
+	* Remove getintmax in printf.
 
 2014-10-13  Eric Blake <eblake@redhat.com>
 
